--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -1,3 +1,13 @@
 plugin: amazon.aws.aws_ec2
 regions:
 - us-east-1
+keyed_groups:
+- key: tags ['name']
+    prefix: ''
+    parent_group: ''
+
+filters:
+    tag:name: "backend*"
+
+compose:
+    ansible_host: 
